--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "sequelize": "^6.37.3",
-    "tedious": "^18.3.0"
+    "tedious": "^18.3.0",
+    "uuid": "^10.0.0"
   }
 }
