--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.0",
     "sequelize": "^6.37.3",
-    "tedious": "^18.3.0",
+    "sequelize-cli": "^6.6.2",
+    "tedious": "^18.6.2",
     "uuid": "^10.0.0"
   }
 }
